.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:59:43 **** Clean-only build of configuration Debug for project ICPC ****
rm -rf src/p2045.o src/p2045.d ICPC.exe 
20:59:45 **** Rebuild of configuration Debug for project ICPC ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -std=c++11 -fmessage-length=0 -o "src\\p2045.o" "..\\src\\p2045.cpp" 
g++ -o ICPC.exe "src\\p2045.o" 
21:30:28 **** Incremental Build of configuration Debug for project ICPC ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -std=c++11 -fmessage-length=0 -o "src\\p2045.o" "..\\src\\p2045.cpp" 
g++ -o ICPC.exe "src\\p2045.o" 
21:32:50 **** Incremental Build of configuration Debug for project ICPC ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -std=c++11 -fmessage-length=0 -o "src\\p2045.o" "..\\src\\p2045.cpp" 
..\src\p2045.cpp: In function 'int main(int, const char**)':
..\src\p2045.cpp:73:17: error: no 'operator++(int)' declared for postfix '++' [-fpermissive]
    end[ancestor]++;
                 ^
..\src\p2045.cpp:81:19: error: cannot bind 'std::basic_ostream<char>' lvalue to 'std::basic_ostream<char>&&'
   cout << x.first << ":" << x.second << endl;
                   ^
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\iostream:39:0,
                 from ..\src\p2045.cpp:4:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ostream:602:5: error:   initializing argument 1 of 'std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = std::less<int>]'
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
21:33:11 **** Incremental Build of configuration Debug for project ICPC ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -std=c++11 -fmessage-length=0 -o "src\\p2045.o" "..\\src\\p2045.cpp" 
..\src\p2045.cpp: In function 'int main(int, const char**)':
..\src\p2045.cpp:73:18: error: no match for 'operator+=' (operand types are 'std::map<int, std::less<int> >::mapped_type {aka std::less<int>}' and 'int')
    end[ancestor] += 1;
                  ^
..\src\p2045.cpp:81:19: error: cannot bind 'std::basic_ostream<char>' lvalue to 'std::basic_ostream<char>&&'
   cout << x.first << ":" << x.second << endl;
                   ^
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\iostream:39:0,
                 from ..\src\p2045.cpp:4:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ostream:602:5: error:   initializing argument 1 of 'std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = std::less<int>]'
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
21:33:26 **** Incremental Build of configuration Debug for project ICPC ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -std=c++11 -fmessage-length=0 -o "src\\p2045.o" "..\\src\\p2045.cpp" 
..\src\p2045.cpp: In function 'int main(int, const char**)':
..\src\p2045.cpp:73:18: error: no match for 'operator=' (operand types are 'std::map<int, std::less<int> >::mapped_type {aka std::less<int>}' and 'int')
    end[ancestor] = 1;
                  ^
..\src\p2045.cpp:73:18: note: candidates are:
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\string:48:0,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\locale_classes.h:40,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\ios_base.h:41,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ios:42,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ostream:38,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\iostream:39,
                 from ..\src\p2045.cpp:4:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_function.h:231:12: note: std::less<int>& std::less<int>::operator=(const std::less<int>&)
     struct less : public binary_function<_Tp, _Tp, bool>
            ^
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_function.h:231:12: note:   no known conversion for argument 1 from 'int' to 'const std::less<int>&'
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_function.h:231:12: note: std::less<int>& std::less<int>::operator=(std::less<int>&&)
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_function.h:231:12: note:   no known conversion for argument 1 from 'int' to 'std::less<int>&&'
..\src\p2045.cpp:81:19: error: cannot bind 'std::basic_ostream<char>' lvalue to 'std::basic_ostream<char>&&'
   cout << x.first << ":" << x.second << endl;
                   ^
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\iostream:39:0,
                 from ..\src\p2045.cpp:4:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ostream:602:5: error:   initializing argument 1 of 'std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = std::less<int>]'
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
21:35:49 **** Incremental Build of configuration Debug for project ICPC ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -std=c++11 -fmessage-length=0 -o "src\\p2045.o" "..\\src\\p2045.cpp" 
..\src\p2045.cpp: In function 'int main(int, const char**)':
..\src\p2045.cpp:73:18: error: 'std::map<int, std::less<int> >::mapped_type' has no member named 'insert'
    end[ancestor].insert(1);
                  ^
..\src\p2045.cpp:81:19: error: cannot bind 'std::basic_ostream<char>' lvalue to 'std::basic_ostream<char>&&'
   cout << x.first << ":" << x.second << endl;
                   ^
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\iostream:39:0,
                 from ..\src\p2045.cpp:4:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ostream:602:5: error:   initializing argument 1 of 'std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = std::less<int>]'
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
21:36:01 **** Incremental Build of configuration Debug for project ICPC ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -std=c++11 -fmessage-length=0 -o "src\\p2045.o" "..\\src\\p2045.cpp" 
..\src\p2045.cpp: In function 'int main(int, const char**)':
..\src\p2045.cpp:73:18: error: request for member 'insert' in 'end.std::map<_Key, _Tp, _Compare, _Alloc>::operator[]<int, int, std::less<int>, std::allocator<std::pair<const int, int> > >((*(const key_type*)(& ancestor)))', which is of non-class type 'std::map<int, int>::mapped_type {aka int}'
    end[ancestor].insert(1);
                  ^
21:36:15 **** Incremental Build of configuration Debug for project ICPC ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -std=c++11 -fmessage-length=0 -o "src\\p2045.o" "..\\src\\p2045.cpp" 
g++ -o ICPC.exe "src\\p2045.o" 
21:38:11 **** Incremental Build of configuration Debug for project ICPC ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -std=c++11 -fmessage-length=0 -o "src\\p2045.o" "..\\src\\p2045.cpp" 
g++ -o ICPC.exe "src\\p2045.o" 
Info: Nothing to build for ICPC
